--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -18,41 +18,18 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Chocolatey
+    - name: Install dependencies
       run: |
-        Set-ExecutionPolicy Bypass -Scope Process -Force
-        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
-        iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-    - name: Install Chrome
-      run: choco install googlechrome -y
-
-    - name: Extract Chrome Version
+    - name: Install Chrome & Driver
       run: |
-        $chromePath = "HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\chrome.exe"
-        $chromeVersion = (Get-ItemProperty -Path $chromePath).'(default)' | ForEach-Object {
-            (Get-Item $_).VersionInfo.ProductVersion
-        }
-        if (-not $chromeVersion) {
-          Write-Host "Failed to extract Chrome version. Ensure Google Chrome is installed."
-          exit 1
-        }
-        Write-Host "Chrome version: $chromeVersion"
-
-    - name: Install ChromeDriver
-      run: |
-        $chromeVersion = (Get-ItemProperty -Path "HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\App Paths\chrome.exe").'(default)' | ForEach-Object {
-            (Get-Item $_).VersionInfo.ProductVersion
-        }
-        $driverVersion = Invoke-RestMethod -Uri "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$chromeVersion"
-        if (-not $driverVersion) {
-          Write-Host "Failed to fetch ChromeDriver version for Chrome version $chromeVersion."
-          exit 1
-        }
-        Write-Host "ChromeDriver version: $driverVersion"
-        Invoke-WebRequest -Uri "https://chromedriver.storage.googleapis.com/$driverVersion/chromedriver_win32.zip" -OutFile "chromedriver.zip"
-        Expand-Archive -Path "chromedriver.zip" -DestinationPath "."
-        Move-Item -Path ".\chromedriver.exe" -Destination "C:\Windows\System32"
+        sudo apt-get update
+        sudo apt-get install -y wget unzip
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo apt install -y ./google-chrome-stable_current_amd64.deb
+        CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')    
 
     - name: Run tests
       run: pytest Testcases/ --html=reports/report.html --self-contained-html
@@ -61,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-report
-        path: reports/report.html
+        path: report.html
