--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install Chrome & Driver
+    - name: Install Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
